# carkey_rs

./: Cargo.toml  README.md
src/: bluetooth_agent.rs  carkey_icce.rs  carkey_icce_aes128.rs  carkey_icce_crypto.rs  main.rs
src/bluetooth/: agent.rs  mod.rs  ranging.rs  uuid.rs
src/icce/: aes128.rs  auth.rs  ble_send_demo.rs  bluetooth_io.rs  card_info.rs  command.rs  dkey_info.rs  mod.rs  notification.rs  objects.rs  session.rs  tsp.rs  vehicle_info.rs
src/iccoa/: auth.rs  ble_send_demo.rs  bluetooth_io.rs  command.rs  mod.rs  objects.rs  pairing.rs  status.rs  utils.rs
src/iccoa/command/: mod.rs  ranging.rs  rke.rs
src/iccoa/notification/: mod.rs  senseless_control.rs  vehicle_status.rs  vehicle_unsafe.rs
src/iccoa2/: apdu.rs  auth.rs  ble_auth.rs  ble_custom.rs  ble_measure.rs  ble_rke.rs  ble_send_demo.rs  ble_vehicle_status.rs  bluetooth_io.rs  certificate.rs  custom.rs  identifier.rs  key_management.rs  measure.rs  message.rs  mod.rs  rke.rs  subscribe.rs  transaction.rs  tsp.rs  vehicle_status.rs
src/iccoa2/ble/: apdu.rs  auth.rs  bluetooth_io.rs  custom.rs  identifier.rs  measure.rs  message.rs  mod.rs  rke.rs  vehicle_status.rs
src/iccoa2/instructions/: auth_0.rs  auth_1.rs  common.rs  control_flow.rs  enable_disable.rs  get_challenge.rs  get_dk_certificate.rs  get_response.rs  list_dk.rs  mod.rs  rke.rs  select.rs  sharing_request.rs  sign.rs
