[package]
name = "bluetooth_icce_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
bitflags = "2.4.0"
bluer = { version = "0.15.7", features = ["full"] }
cmac = "0.7.2"
crc16 = "0.4.0"
error-chain = "0.12.4"
futures = "0.3.28"
lazy_static = "1.4.0"
openssl = "0.10.55"
tokio = { version = "1.29.1", features = ["full"] }
uuid = "1.4.1"
