[package]
name = "carkey_rs"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/linuxhunter/carkey_rs.git"

[profile.release]
lto = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
bitflags = "2.4.0"
bluer = { version = "0.15.7", features = ["full"] }
cmac = "0.7.2"
crc16 = "0.4.0"
ecdh = "0.0.12"
elliptic-curve = { version = "0.13.5", features = ["ecdh"] }
env_logger = "0.10.0"
error-chain = "0.12.4"
futures = "0.3.28"
hex-literal = "0.4.1"
hkdf = "0.12.3"
lazy_static = "1.4.0"
openssl = "0.10.55"
pbkdf2 = "0.12.2"
rand = "0.8.5"
sha2 = "0.10.7"
tokio = { version = "1.29.1", features = ["full"] }
uuid = "1.4.1"
log = "0.4.19"
iso7816-tlv = "0.4.3"
x509-parser = "0.15.1"
http = "1.0.0"
tokio-websockets = { version = "0.5.0", features = ["client", "fastrand", "sha1_smol"] }
base64 = "0.21.7"
cbc = "0.1.2"
ecb = "0.1.2"
